Fix alignment in hierarchical views
Leverage GtkTreeExpander's ability to handle indentation
both for tags in the sidebar and tasks in the task list.
Create a children_count property for the Tag class so
that the expander can bind to it.

This fixes GitHub issue #1042

--- a/GTG/gtk/data/style.css
+++ b/GTG/gtk/data/style.css
@@ -98,10 +98,6 @@ textview check {
   border-spacing: 0;
 }
 
-.arrow-only-expander indent {
-  -gtk-icon-size: 0px;
-}
-
 .closed-task {
     opacity: 0.5;
 }
